--- a/package.json
+++ b/package.json
@@ -18,8 +18,16 @@
     "core-js": "^3.6.5",
     "dotenv": "^16.0.1",
     "eosjs": "^22.1.0",
+    "highcharts": "^10.2.0",
+    "highcharts-vue": "^1.4.0",
+    "ipfs-core": "^0.15.4",
+    "iso-3166-1": "^2.1.1",
+    "md5": "^2.3.0",
+    "moment": "^2.29.4",
     "quasar": "^2.6.0",
+    "slugify": "^1.6.5",
     "vue": "^3.0.0",
+    "vue-gravatar": "^1.4.1",
     "vue-gtag": "^2.0.1",
     "vue-i18n": "^9.0.0",
     "vue-router": "^4.0.0",
