--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "iso-3166-1": "^2.1.1",
     "md5": "^2.3.0",
     "moment": "^2.29.4",
+    "pug-plain-loader": "^1.1.0",
     "quasar": "^2.6.0",
     "slugify": "^1.6.5",
     "vue": "^3.0.0",
@@ -40,7 +41,8 @@
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-vue": "^9.0.0",
     "eslint-webpack-plugin": "^3.1.1",
-    "prettier": "^2.5.1"
+    "prettier": "^2.5.1",
+    "pug": "^3.0.2"
   },
   "browserslist": [
     "last 10 Chrome versions",
