--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "core-js": "^3.6.5",
     "dotenv": "^16.0.1",
     "eosjs": "^22.1.0",
+    "eosjs-ecc": "^4.0.4",
     "highcharts": "^10.2.0",
     "highcharts-vue": "^1.4.0",
     "ipfs-core": "^0.15.4",
@@ -31,6 +32,7 @@
     "vue-gravatar": "^1.4.1",
     "vue-gtag": "^2.0.1",
     "vue-i18n": "^9.0.0",
+    "vue-recaptcha": "^2.0.2",
     "vue-router": "^4.0.0",
     "vuex": "^4.0.1"
   },
