--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
+    "assert": "^2.0.0",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "dotenv": "^16.0.1",
@@ -28,6 +29,7 @@
     "pug-plain-loader": "^1.1.0",
     "quasar": "^2.6.0",
     "slugify": "^1.6.5",
+    "stream": "^0.0.2",
     "vue": "^3.0.0",
     "vue-gravatar": "^1.4.1",
     "vue-gtag": "^2.0.1",
