--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.0.1",
     "eosjs": "^22.1.0",
     "eosjs-ecc": "^4.0.4",
+    "flag-icon-css": "https://github.com/CALEOS/flag-icons.git",
     "highcharts": "^10.2.0",
     "highcharts-vue": "^1.4.0",
     "ipfs-core": "^0.15.4",
@@ -30,6 +31,8 @@
     "quasar": "^2.6.0",
     "slugify": "^1.6.5",
     "stream": "^0.0.2",
+    "ual-anchor": "^1.3.0",
+    "universal-authenticator-library": "^0.3.0",
     "vue": "^3.0.0",
     "vue-croppa": "^1.3.8",
     "vue-gravatar": "^1.4.1",
