--- a/package.json
+++ b/package.json
@@ -44,13 +44,16 @@
     "vuex": "^4.0.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.10",
     "@babel/eslint-parser": "^7.13.14",
     "@quasar/app-webpack": "^3.0.0",
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-vue": "^9.0.0",
     "eslint-webpack-plugin": "^3.1.1",
+    "node-polyfill-webpack-plugin": "^2.0.1",
     "prettier": "^2.5.1",
+    "process": "^0.11.10",
     "pug": "^3.0.2"
   },
   "browserslist": [
