--- a/package.json
+++ b/package.json
@@ -34,12 +34,12 @@
     "universal-authenticator-library": "^0.3.0",
     "vue": "^3.0.0",
     "vue-croppa": "^1.3.8",
-    "vue-gravatar": "^1.4.1",
     "vue-gtag": "^2.0.1",
     "vue-i18n": "^9.0.0",
     "vue-moment": "^4.1.0",
     "vue-recaptcha": "^2.0.2",
     "vue-router": "^4.0.0",
+    "vue3-gravatar": "^3.0.0",
     "vuex": "^4.0.1"
   },
   "devDependencies": {
