--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,2 @@
-#Environment variable that sets the app to mainnet or testnet,
-# comment out the following to set to testnet
-#MAINNET=true
+# Environment variable that sets the app to mainnet or testnet,
+MAINNET=mainnet
