--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
+    "@telosnetwork/ual-cleos": "^0.1.0",
     "assert": "^2.0.0",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
