--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@quasar/cli": "^1.3.2",
     "@quasar/extras": "^1.0.0",
     "@telosnetwork/ual-cleos": "1.13.1",
     "assert": "^2.0.0",
@@ -47,6 +48,7 @@
     "@babel/core": "^7.18.10",
     "@babel/eslint-parser": "^7.13.14",
     "@quasar/app-webpack": "^3.0.0",
+    "@types/vue-router": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
     "eslint": "7.16.0",
