--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "private": true,
   "scripts": {
     "dev": "quasar dev -m spa",
-    "lint": "eslint --ext .js,.vue src",
+    "lint": "eslint --ext .js,.ts,.vue src",
     "lint:fix": "eslint --fix --ext .js,.vue src",
     "test": "echo \"No test specified\" && exit 0",
     "build": "quasar build -m spa"
@@ -48,8 +48,9 @@
     "@quasar/app-webpack": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
-    "eslint": "^8.10.1",
+    "eslint": "7.16.0",
     "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-prettier": "3.3.1",
     "eslint-plugin-vue": "^9.0.0",
     "eslint-webpack-plugin": "^3.1.1",
     "node-polyfill-webpack-plugin": "^2.0.1",
