--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "eslint-plugin-prettier": "3.3.1",
     "eslint-plugin-vue": "^9.0.0",
     "eslint-webpack-plugin": "^3.1.1",
+    "husky": "^7.0.4",
     "node-polyfill-webpack-plugin": "^2.0.1",
     "prettier": "^2.5.1",
     "process": "^0.11.10",
