--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "lint": "eslint --ext .js,.ts,.vue src",
     "lint:fix": "eslint --fix --ext .js,.vue src",
     "test": "echo \"No test specified\" && exit 0",
-    "build": "quasar build -m spa",
-    "prepare": "husky install"
+    "build": "quasar build -m spa"
   },
   "dependencies": {
     "@quasar/cli": "^1.3.2",
@@ -57,7 +56,6 @@
     "eslint-plugin-prettier": "3.3.1",
     "eslint-plugin-vue": "^9.0.0",
     "eslint-webpack-plugin": "^3.1.1",
-    "husky": "^7.0.4",
     "node-polyfill-webpack-plugin": "^2.0.1",
     "prettier": "^2.5.1",
     "process": "^0.11.10",
