--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: 'CI'
+name: "CI"
 
 on: [pull_request]
 
@@ -10,7 +10,7 @@ jobs:
       - name: lint
         uses: actions/setup-node@v1
         with:
-          node-version: '16.17.0'
+          node-version: "16.17.0"
       - run: yarn install
       - run: yarn lint
 
@@ -41,3 +41,5 @@ jobs:
             "description": "linter failed 🚨",
             "target_url": "https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
           }'
+
+#
