--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "app-telos-net",
-  "version": "0.0.1",
+  "name": "app-telos-native",
+  "version": "1.1.2",
   "description": "Native App",
   "productName": "Telos App",
   "author": "Don Peat <don@caleos.io>",
