--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@quasar/cli": "^1.3.2",
     "@quasar/extras": "^1.0.0",
+    "@quasar/quasar-ui-qmarkdown": "^2.0.0-beta.10",
     "@telosnetwork/ual-cleos": "1.13.1",
     "assert": "^2.0.0",
     "axios": "^0.21.1",
